# sdk-dslink-c

./: .gitattributes  .gitignore  .gitmodules  .travis.sh  .travis.yml  .travis_deps.sh  CMakeLists.txt  README.md  getos.sh  legion.json
broker/include/broker/: broker.h  config.h  data.h  extension.h  global.h  handshake.h  http.h  msg_handler.h  node.h  remote_dslink.h  server.h  stream.h  subscription.h  utils.h
broker/include/broker/data/: data.h  data_actions.h
broker/include/broker/msg/: msg_close.h  msg_handler.h  msg_invoke.h  msg_list.h  msg_remove.h  msg_set.h  msg_subscribe.h  msg_unsubscribe.h
broker/include/broker/net/: http.h  server.h  ws.h  ws_handler.h
broker/include/broker/permission/: permission.h  permission_group.h
broker/include/broker/query/: query.h
broker/include/broker/sys/: clear_conns.h  inspect.h  permission_action.h  restart.h  sys.h  throughput.h  token.h  trace.h
broker/include/broker/upstream/: upstream_handshake.h  upstream_node.h
broker/src/: broker.c  config.c  data.c  handshake.c  http.c  main.c  msg_handler.c  node.c  remote_dslink.c  server.c  stream.c  subscription.c  utils.c
broker/src/data/: data.c  data_actions.c
broker/src/msg/: msg_close.c  msg_handler.c  msg_invoke.c  msg_list.c  msg_list_remote.c  msg_remove.c  msg_set.c  msg_subscribe.c  msg_unsubscribe.c  sub_client.c  sub_stream.c
broker/src/net/: http.c  server.c  ws.c  ws_handler.c
broker/src/node/: node.c  node_serialization.c  virtual_downstream.c
broker/src/permission/: permission.c  permission_group.c
broker/src/query/: query.c
broker/src/sys/: clear_conns.c  inspect.c  permission_action.c  restart.c  sys.c  throughput.c  token.c  trace.c
broker/src/upstream/: async_connect.c  upstream_handshake.c  upstream_node.c  upstream_sys_node.c
examples/eip-requester/: CMakeLists.txt
examples/eip-requester/src/: main.c
examples/eip-responder/: CMakeLists.txt
examples/eip-responder/include/: eip-responder.h  rng.h  serialization.h
examples/eip-responder/src/: eip-responder.c  invoke.c  main.c  replicator.c  serialization.c
examples/requester/src/: main.c
examples/responder/: CMakeLists.txt
examples/responder/include/: invoke.h  replicator.h  sequence.h
examples/responder/src/: invoke.c  main.c  replicator.c  rng.c  sequence.c  serialization.c
examples/storage/: CMakeLists.txt
examples/storage/src/: main.c
sdk/include/dslink/: base64_url.h  crypto.h  dslink.h  err.h  event_loop.h  handshake.h  log.h  node.h  requester.h  socket.h  socket_private.h  stream.h  threadsafe_api_test.h  timer.h  url.h  utils.h  ws.h
sdk/include/dslink/col/: list.h  listener.h  map.h  ringbuffer.h  vector.h
sdk/include/dslink/mem/: mem.h  ref.h
sdk/include/dslink/msg/: list_response.h  request_handler.h  response_handler.h  sub_response.h
sdk/include/dslink/storage/: json_file.h  json_in_memory.h  storage.h
sdk/src/: .log.c.swp  async_connect.c  base64_url.c  crypto.c  dslink.c  event_loop.c  handshake.c  log.c  node.c  requester.c  socket.c  threadsafe_api_test.c  timer.c  url.c  utils.c  ws.c
sdk/src/col/: list.c  listener.c  map.c  ringbuffer.c  vector.c
sdk/src/mem/: mem.c  ref.c
sdk/src/msg/: list_response.c  request_handler.c  response_handler.c  sub_response.c
sdk/src/storage/: json_file.c  json_in_memory.c  storage.c
test/: CMakeLists.txt  CTestTestfile.cmake  cmocka.cmake
test/broker/: node_test.c  utils_test.c
test/dart/: dart_test.yaml  pubspec.yaml  testbroker.dart  testcase2_merge_sub_updates.dart  testcase3_invoke_stream.dart
test/dart/broker/: sub_nonexistent_node_test.dart
test/dart/experiment/: testcase1_sub_and_disconnect.dart  testcase4_sub_and _reconnect_resp.dart  testcase5_sub_qos.dart
test/include/: cmocka_init.h  thread_safe_api_test.h
test/sdk/: col_map_test.c  col_ringbuf_test.c  col_vec_test.c  crypto_test.c  socket_test.c  thread_safe_api_test.c  utils_msgpack_test.c  utils_test.c
test/src/: col_map_test.c
tools/: build.sh  legion.sh
tools/cmake/: MacroEnsureOutOfSourceBuild.cmake
tools/utils/: ansi.sh
